using System.Text.Json.Serialization;
using CollegeLMS.API.Entities.Enums;

namespace CollegeLMS.API.Entities;

public class Course : Entity
{
    public string Title { get; set; } = string.Empty;
    public string Description { get; set; } = string.Empty;
    public Guid TeacherId { get; set; }
    public CourseStatus Status { get; set; }
    public bool IsActive { get; set; } = true;

    [JsonIgnore]
    public Teacher Teacher { get; set; } = null!;

    [JsonIgnore]
    public ICollection<Lesson> Lessons { get; set; } = new List<Lesson>();

    [JsonIgnore]
    public ICollection<CourseMaterial> Materials { get; set; } = new List<CourseMaterial>();

    [JsonIgnore]
    public ICollection<CourseDocument> CourseDocuments { get; set; } = new List<CourseDocument>();

    [JsonIgnore]
    public ICollection<Test> Tests { get; set; } = new List<Test>();

    [JsonIgnore]
    public ICollection<CourseGroup> CourseGroups { get; set; } = new List<CourseGroup>();

    [JsonIgnore]
    public ICollection<CourseAuthor> CourseAuthors { get; set; } = new List<CourseAuthor>();
}
