namespace CollegeLMS.API.Entities;

public class NewsCategory : Entity
{
    public string Name { get; set; } = string.Empty;
    public string Slug { get; set; } = string.Empty;
}
